# JAX-Transformer

./: .gitignore  README.md  pyproject.toml  requirements.txt
cuda/: benchmark_cuda.py  fused_attention.cu  setup.py
docs/: CS336_ASSIGNMENT1_CHECKLIST.md  SPEEDRUN_BENCHMARK.md
notebooks/: demo_train_generate.ipynb  speedrun_tinystories.ipynb
src/: __init__.py  generate.py  model.py  optimizer.py  tokenizer.py  train.py
